trabalho_final/etapa3/parser.output
Terminals unused in grammar

    TK_TIPO
    TK_ER


Grammar

    0 $accept: programa $end

    1 programa: ε
    2         | lista_elementos ';'

    3 lista_elementos: elemento
    4                | lista_elementos ',' elemento

    5 elemento: definicao_funcao
    6         | declaracao_variavel_s_ini

    7 definicao_funcao: TK_ID TK_SETA tipo lista_opicional_parametros TK_ATRIB corpo_funcao

    8 lista_opicional_parametros: ε
    9                           | TK_COM lista_parametros
   10                           | lista_parametros

   11 lista_parametros: parametro
   12                 | lista_parametros ',' parametro

   13 parametro: TK_ID TK_ATRIB tipo

   14 corpo_funcao: bloco_comandos

   15 declaracao_variavel_s_ini: TK_VAR TK_ID TK_ATRIB tipo

   16 tipo: TK_DECIMAL
   17     | TK_INTEIRO

   18 declaracao_variavel_c_ini_opcional: TK_VAR TK_ID TK_ATRIB TK_INTEIRO inicializacao_inteiro_opcional
   19                                   | TK_VAR TK_ID TK_ATRIB TK_DECIMAL inicializacao_decimal_opcional

   20 inicializacao_inteiro_opcional: ε
   21                               | TK_COM TK_LI_INTEIRO

   22 inicializacao_decimal_opcional: ε
   23                               | TK_COM TK_LI_DECIMAL
   24                               | TK_COM TK_LI_INTEIRO

   25 literal: TK_LI_INTEIRO
   26        | TK_LI_DECIMAL

   27 comando_simples: bloco_comandos
   28                | declaracao_variavel_c_ini_opcional
   29                | comando_atribuicao
   30                | chamada_funcao
   31                | comando_retorno
   32                | construcoes_fluxo_controle

   33 bloco_comandos: '[' lista_comando_simples_opicionais ']'

   34 lista_comando_simples_opicionais: ε
   35                                 | lista_comando_simples

   36 lista_comando_simples: comando_simples
   37                      | lista_comando_simples comando_simples

   38 comando_atribuicao: TK_ID TK_ATRIB expressao

   39 chamada_funcao: TK_ID '(' lista_argumentos_opcional ')'

   40 lista_argumentos_opcional: ε
   41                          | lista_argumentos

   42 lista_argumentos: expressao
   43                 | lista_argumentos ',' expressao

   44 comando_retorno: TK_RETORNA expressao TK_ATRIB tipo

   45 construcoes_fluxo_controle: comando_condicional
   46                           | comando_enquanto

   47 comando_condicional: TK_SE '(' expressao ')' bloco_comandos senao_opcional

   48 senao_opcional: ε
   49               | TK_SENAO bloco_comandos

   50 comando_enquanto: TK_ENQUANTO '(' expressao ')' bloco_comandos

   51 expressao: expr_nivel7

   52 expr_nivel7: expr_nivel7 '|' expr_nivel6
   53            | expr_nivel6

   54 expr_nivel6: expr_nivel6 '&' expr_nivel5
   55            | expr_nivel5

   56 expr_nivel5: expr_nivel5 TK_OC_EQ expr_nivel4
   57            | expr_nivel5 TK_OC_NE expr_nivel4
   58            | expr_nivel4

   59 expr_nivel4: expr_nivel4 '<' expr_nivel3
   60            | expr_nivel4 '>' expr_nivel3
   61            | expr_nivel4 TK_OC_LE expr_nivel3
   62            | expr_nivel4 TK_OC_GE expr_nivel3
   63            | expr_nivel3

   64 expr_nivel3: expr_nivel3 '+' expr_nivel2
   65            | expr_nivel3 '-' expr_nivel2
   66            | expr_nivel2

   67 expr_nivel2: expr_nivel2 '*' expr_nivel1
   68            | expr_nivel2 '/' expr_nivel1
   69            | expr_nivel2 '%' expr_nivel1
   70            | expr_nivel1

   71 expr_nivel1: '+' expr_nivel1
   72            | '-' expr_nivel1
   73            | '!' expr_nivel1
   74            | fator

   75 fator: TK_ID
   76      | literal
   77      | chamada_funcao
   78      | '(' expressao ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 73
    '%' (37) 69
    '&' (38) 54
    '(' (40) 39 47 50 78
    ')' (41) 39 47 50 78
    '*' (42) 67
    '+' (43) 64 71
    ',' (44) 4 12 43
    '-' (45) 65 72
    '/' (47) 68
    ';' (59) 2
    '<' (60) 59
    '>' (62) 60
    '[' (91) 33
    ']' (93) 33
    '|' (124) 52
    error (256)
    TK_ID <valor_lex> (258) 7 13 15 18 19 38 39 75
    TK_LI_INTEIRO <valor_lex> (259) 21 24 25
    TK_LI_DECIMAL <valor_lex> (260) 23 26
    TK_SENAO (261) 49
    TK_SE (262) 47
    TK_RETORNA (263) 44
    TK_ATRIB (264) 7 13 15 18 19 38 44
    TK_ENQUANTO (265) 50
    TK_COM (266) 9 21 23 24
    TK_SETA (267) 7
    TK_TIPO (268)
    TK_VAR (269) 15 18 19
    TK_DECIMAL (270) 16 19
    TK_INTEIRO (271) 17 18
    TK_OC_LE (272) 61
    TK_OC_GE (273) 62
    TK_OC_EQ (274) 56
    TK_OC_NE (275) 57
    TK_ER (276)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa <arvore> (39)
        on left: 1 2
        on right: 0
    lista_elementos <arvore> (40)
        on left: 3 4
        on right: 2 4
    elemento <arvore> (41)
        on left: 5 6
        on right: 3 4
    definicao_funcao <arvore> (42)
        on left: 7
        on right: 5
    lista_opicional_parametros <arvore> (43)
        on left: 8 9 10
        on right: 7
    lista_parametros <arvore> (44)
        on left: 11 12
        on right: 9 10 12
    parametro <arvore> (45)
        on left: 13
        on right: 11 12
    corpo_funcao <arvore> (46)
        on left: 14
        on right: 7
    declaracao_variavel_s_ini <arvore> (47)
        on left: 15
        on right: 6
    tipo (48)
        on left: 16 17
        on right: 7 13 15 44
    declaracao_variavel_c_ini_opcional <arvore> (49)
        on left: 18 19
        on right: 28
    inicializacao_inteiro_opcional <arvore> (50)
        on left: 20 21
        on right: 18
    inicializacao_decimal_opcional <arvore> (51)
        on left: 22 23 24
        on right: 19
    literal <arvore> (52)
        on left: 25 26
        on right: 76
    comando_simples <arvore> (53)
        on left: 27 28 29 30 31 32
        on right: 36 37
    bloco_comandos <arvore> (54)
        on left: 33
        on right: 14 27 47 49 50
    lista_comando_simples_opicionais <arvore> (55)
        on left: 34 35
        on right: 33
    lista_comando_simples <arvore> (56)
        on left: 36 37
        on right: 35 37
    comando_atribuicao <arvore> (57)
        on left: 38
        on right: 29
    chamada_funcao <arvore> (58)
        on left: 39
        on right: 30 77
    lista_argumentos_opcional <arvore> (59)
        on left: 40 41
        on right: 39
    lista_argumentos <arvore> (60)
        on left: 42 43
        on right: 41 43
    comando_retorno <arvore> (61)
        on left: 44
        on right: 31
    construcoes_fluxo_controle <arvore> (62)
        on left: 45 46
        on right: 32
    comando_condicional <arvore> (63)
        on left: 47
        on right: 45
    senao_opcional <arvore> (64)
        on left: 48 49
        on right: 47
    comando_enquanto <arvore> (65)
        on left: 50
        on right: 46
    expressao <arvore> (66)
        on left: 51
        on right: 38 42 43 44 47 50 78
    expr_nivel7 <arvore> (67)
        on left: 52 53
        on right: 51 52
    expr_nivel6 <arvore> (68)
        on left: 54 55
        on right: 52 53 54
    expr_nivel5 <arvore> (69)
        on left: 56 57 58
        on right: 54 55 56 57
    expr_nivel4 <arvore> (70)
        on left: 59 60 61 62 63
        on right: 56 57 58 59 60 61 62
    expr_nivel3 <arvore> (71)
        on left: 64 65 66
        on right: 59 60 61 62 63 64 65
    expr_nivel2 <arvore> (72)
        on left: 67 68 69 70
        on right: 64 65 66 67 68 69
    expr_nivel1 <arvore> (73)
        on left: 71 72 73 74
        on right: 67 68 69 70 71 72 73
    fator <arvore> (74)
        on left: 75 76 77 78
        on right: 74


State 0

    0 $accept: • programa $end

    TK_ID   shift, and go to state 1
    TK_VAR  shift, and go to state 2

    $default  reduce using rule 1 (programa)

    programa                   go to state 3
    lista_elementos            go to state 4
    elemento                   go to state 5
    definicao_funcao           go to state 6
    declaracao_variavel_s_ini  go to state 7


State 1

    7 definicao_funcao: TK_ID • TK_SETA tipo lista_opicional_parametros TK_ATRIB corpo_funcao

    TK_SETA  shift, and go to state 8


State 2

   15 declaracao_variavel_s_ini: TK_VAR • TK_ID TK_ATRIB tipo

    TK_ID  shift, and go to state 9


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 10


State 4

    2 programa: lista_elementos • ';'
    4 lista_elementos: lista_elementos • ',' elemento

    ';'  shift, and go to state 11
    ','  shift, and go to state 12


State 5

    3 lista_elementos: elemento •

    $default  reduce using rule 3 (lista_elementos)


State 6

    5 elemento: definicao_funcao •

    $default  reduce using rule 5 (elemento)


State 7

    6 elemento: declaracao_variavel_s_ini •

    $default  reduce using rule 6 (elemento)


State 8

    7 definicao_funcao: TK_ID TK_SETA • tipo lista_opicional_parametros TK_ATRIB corpo_funcao

    TK_DECIMAL  shift, and go to state 13
    TK_INTEIRO  shift, and go to state 14

    tipo  go to state 15


State 9

   15 declaracao_variavel_s_ini: TK_VAR TK_ID • TK_ATRIB tipo

    TK_ATRIB  shift, and go to state 16


State 10

    0 $accept: programa $end •

    $default  accept


State 11

    2 programa: lista_elementos ';' •

    $default  reduce using rule 2 (programa)


State 12

    4 lista_elementos: lista_elementos ',' • elemento

    TK_ID   shift, and go to state 1
    TK_VAR  shift, and go to state 2

    elemento                   go to state 17
    definicao_funcao           go to state 6
    declaracao_variavel_s_ini  go to state 7


State 13

   16 tipo: TK_DECIMAL •

    $default  reduce using rule 16 (tipo)


State 14

   17 tipo: TK_INTEIRO •

    $default  reduce using rule 17 (tipo)


State 15

    7 definicao_funcao: TK_ID TK_SETA tipo • lista_opicional_parametros TK_ATRIB corpo_funcao

    TK_ID   shift, and go to state 18
    TK_COM  shift, and go to state 19

    $default  reduce using rule 8 (lista_opicional_parametros)

    lista_opicional_parametros  go to state 20
    lista_parametros            go to state 21
    parametro                   go to state 22


State 16

   15 declaracao_variavel_s_ini: TK_VAR TK_ID TK_ATRIB • tipo

    TK_DECIMAL  shift, and go to state 13
    TK_INTEIRO  shift, and go to state 14

    tipo  go to state 23


State 17

    4 lista_elementos: lista_elementos ',' elemento •

    $default  reduce using rule 4 (lista_elementos)


State 18

   13 parametro: TK_ID • TK_ATRIB tipo

    TK_ATRIB  shift, and go to state 24


State 19

    9 lista_opicional_parametros: TK_COM • lista_parametros

    TK_ID  shift, and go to state 18

    lista_parametros  go to state 25
    parametro         go to state 22


State 20

    7 definicao_funcao: TK_ID TK_SETA tipo lista_opicional_parametros • TK_ATRIB corpo_funcao

    TK_ATRIB  shift, and go to state 26


State 21

   10 lista_opicional_parametros: lista_parametros •
   12 lista_parametros: lista_parametros • ',' parametro

    ','  shift, and go to state 27

    $default  reduce using rule 10 (lista_opicional_parametros)


State 22

   11 lista_parametros: parametro •

    $default  reduce using rule 11 (lista_parametros)


State 23

   15 declaracao_variavel_s_ini: TK_VAR TK_ID TK_ATRIB tipo •

    $default  reduce using rule 15 (declaracao_variavel_s_ini)


State 24

   13 parametro: TK_ID TK_ATRIB • tipo

    TK_DECIMAL  shift, and go to state 13
    TK_INTEIRO  shift, and go to state 14

    tipo  go to state 28


State 25

    9 lista_opicional_parametros: TK_COM lista_parametros •
   12 lista_parametros: lista_parametros • ',' parametro

    ','  shift, and go to state 27

    $default  reduce using rule 9 (lista_opicional_parametros)


State 26

    7 definicao_funcao: TK_ID TK_SETA tipo lista_opicional_parametros TK_ATRIB • corpo_funcao

    '['  shift, and go to state 29

    corpo_funcao    go to state 30
    bloco_comandos  go to state 31


State 27

   12 lista_parametros: lista_parametros ',' • parametro

    TK_ID  shift, and go to state 18

    parametro  go to state 32


State 28

   13 parametro: TK_ID TK_ATRIB tipo •

    $default  reduce using rule 13 (parametro)


State 29

   33 bloco_comandos: '[' • lista_comando_simples_opicionais ']'

    TK_ID        shift, and go to state 33
    TK_SE        shift, and go to state 34
    TK_RETORNA   shift, and go to state 35
    TK_ENQUANTO  shift, and go to state 36
    TK_VAR       shift, and go to state 37
    '['          shift, and go to state 29

    $default  reduce using rule 34 (lista_comando_simples_opicionais)

    declaracao_variavel_c_ini_opcional  go to state 38
    comando_simples                     go to state 39
    bloco_comandos                      go to state 40
    lista_comando_simples_opicionais    go to state 41
    lista_comando_simples               go to state 42
    comando_atribuicao                  go to state 43
    chamada_funcao                      go to state 44
    comando_retorno                     go to state 45
    construcoes_fluxo_controle          go to state 46
    comando_condicional                 go to state 47
    comando_enquanto                    go to state 48


State 30

    7 definicao_funcao: TK_ID TK_SETA tipo lista_opicional_parametros TK_ATRIB corpo_funcao •

    $default  reduce using rule 7 (definicao_funcao)


State 31

   14 corpo_funcao: bloco_comandos •

    $default  reduce using rule 14 (corpo_funcao)


State 32

   12 lista_parametros: lista_parametros ',' parametro •

    $default  reduce using rule 12 (lista_parametros)


State 33

   38 comando_atribuicao: TK_ID • TK_ATRIB expressao
   39 chamada_funcao: TK_ID • '(' lista_argumentos_opcional ')'

    TK_ATRIB  shift, and go to state 49
    '('       shift, and go to state 50


State 34

   47 comando_condicional: TK_SE • '(' expressao ')' bloco_comandos senao_opcional

    '('  shift, and go to state 51


State 35

   44 comando_retorno: TK_RETORNA • expressao TK_ATRIB tipo

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 53
    TK_LI_DECIMAL  shift, and go to state 54
    '('            shift, and go to state 55
    '+'            shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58

    literal         go to state 59
    chamada_funcao  go to state 60
    expressao       go to state 61
    expr_nivel7     go to state 62
    expr_nivel6     go to state 63
    expr_nivel5     go to state 64
    expr_nivel4     go to state 65
    expr_nivel3     go to state 66
    expr_nivel2     go to state 67
    expr_nivel1     go to state 68
    fator           go to state 69


State 36

   50 comando_enquanto: TK_ENQUANTO • '(' expressao ')' bloco_comandos

    '('  shift, and go to state 70


State 37

   18 declaracao_variavel_c_ini_opcional: TK_VAR • TK_ID TK_ATRIB TK_INTEIRO inicializacao_inteiro_opcional
   19                                   | TK_VAR • TK_ID TK_ATRIB TK_DECIMAL inicializacao_decimal_opcional

    TK_ID  shift, and go to state 71


State 38

   28 comando_simples: declaracao_variavel_c_ini_opcional •

    $default  reduce using rule 28 (comando_simples)


State 39

   36 lista_comando_simples: comando_simples •

    $default  reduce using rule 36 (lista_comando_simples)


State 40

   27 comando_simples: bloco_comandos •

    $default  reduce using rule 27 (comando_simples)


State 41

   33 bloco_comandos: '[' lista_comando_simples_opicionais • ']'

    ']'  shift, and go to state 72


State 42

   35 lista_comando_simples_opicionais: lista_comando_simples •
   37 lista_comando_simples: lista_comando_simples • comando_simples

    TK_ID        shift, and go to state 33
    TK_SE        shift, and go to state 34
    TK_RETORNA   shift, and go to state 35
    TK_ENQUANTO  shift, and go to state 36
    TK_VAR       shift, and go to state 37
    '['          shift, and go to state 29

    $default  reduce using rule 35 (lista_comando_simples_opicionais)

    declaracao_variavel_c_ini_opcional  go to state 38
    comando_simples                     go to state 73
    bloco_comandos                      go to state 40
    comando_atribuicao                  go to state 43
    chamada_funcao                      go to state 44
    comando_retorno                     go to state 45
    construcoes_fluxo_controle          go to state 46
    comando_condicional                 go to state 47
    comando_enquanto                    go to state 48


State 43

   29 comando_simples: comando_atribuicao •

    $default  reduce using rule 29 (comando_simples)


State 44

   30 comando_simples: chamada_funcao •

    $default  reduce using rule 30 (comando_simples)


State 45

   31 comando_simples: comando_retorno •

    $default  reduce using rule 31 (comando_simples)


State 46

   32 comando_simples: construcoes_fluxo_controle •

    $default  reduce using rule 32 (comando_simples)


State 47

   45 construcoes_fluxo_controle: comando_condicional •

    $default  reduce using rule 45 (construcoes_fluxo_controle)


State 48

   46 construcoes_fluxo_controle: comando_enquanto •

    $default  reduce using rule 46 (construcoes_fluxo_controle)


State 49

   38 comando_atribuicao: TK_ID TK_ATRIB • expressao

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 53
    TK_LI_DECIMAL  shift, and go to state 54
    '('            shift, and go to state 55
    '+'            shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58

    literal         go to state 59
    chamada_funcao  go to state 60
    expressao       go to state 74
    expr_nivel7     go to state 62
    expr_nivel6     go to state 63
    expr_nivel5     go to state 64
    expr_nivel4     go to state 65
    expr_nivel3     go to state 66
    expr_nivel2     go to state 67
    expr_nivel1     go to state 68
    fator           go to state 69


State 50

   39 chamada_funcao: TK_ID '(' • lista_argumentos_opcional ')'

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 53
    TK_LI_DECIMAL  shift, and go to state 54
    '('            shift, and go to state 55
    '+'            shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58

    $default  reduce using rule 40 (lista_argumentos_opcional)

    literal                    go to state 59
    chamada_funcao             go to state 60
    lista_argumentos_opcional  go to state 75
    lista_argumentos           go to state 76
    expressao                  go to state 77
    expr_nivel7                go to state 62
    expr_nivel6                go to state 63
    expr_nivel5                go to state 64
    expr_nivel4                go to state 65
    expr_nivel3                go to state 66
    expr_nivel2                go to state 67
    expr_nivel1                go to state 68
    fator                      go to state 69


State 51

   47 comando_condicional: TK_SE '(' • expressao ')' bloco_comandos senao_opcional

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 53
    TK_LI_DECIMAL  shift, and go to state 54
    '('            shift, and go to state 55
    '+'            shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
